# kinematic-icp

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
.github/workflows/: cpp.yml  pre-commit.yml  ros.yml
cpp/kinematic_icp/: CMakeLists.txt
cpp/kinematic_icp/benchmark/: CMakeLists.txt  register_frame_benchmark.cpp  test_loop.cpp  utils.hpp  voxel_grids_benchmark.cpp  world.hpp
cpp/kinematic_icp/cmake/: CompilerOptions.cmake
cpp/kinematic_icp/correspondence_threshold/: CMakeLists.txt  CorrespondenceThreshold.cpp  CorrespondenceThreshold.hpp
cpp/kinematic_icp/local_map/: CMakeLists.txt  SparseVoxelGrid.cpp  SparseVoxelGrid.hpp  VoxelHashMap.cpp  VoxelHashMap.hpp  VoxelUtils.cpp  VoxelUtils.hpp
cpp/kinematic_icp/pipeline/: CMakeLists.txt  KinematicICP.cpp  KinematicICP.hpp
cpp/kinematic_icp/preprocessing/: CMakeLists.txt  PointCloud.hpp  Preprocessing.cpp  Preprocessing.hpp  StampedPointCloud.cpp  StampedPointCloud.hpp
cpp/kinematic_icp/registration/: CMakeLists.txt  Registration.cpp  Registration.hpp
cpp/kinematic_icp/threshold/: AdaptiveThreshold.cpp  AdaptiveThreshold.hpp  CMakeLists.txt
ros/: CMakeLists.txt  LICENSE  package.xml
ros/config/: kinematic_icp_ros.yaml
ros/include/kinematic_icp_ros/nodes/: offline_node.hpp  online_node.hpp
ros/include/kinematic_icp_ros/server/: LidarOdometryServer.hpp
ros/include/kinematic_icp_ros/utils/: RosUtils.hpp  RosbagUtils.hpp  TimeStampHandler.hpp  indicators.hpp
ros/launch/: common_args.launch.py  offline_node.launch.py  online_node.launch.py
ros/rviz/: kinematic_icp.rviz
ros/src/kinematic_icp_ros/nodes/: offline_node.cpp  online_node.cpp
ros/src/kinematic_icp_ros/server/: LidarOdometryServer.cpp
ros/src/kinematic_icp_ros/utils/: RosUtils.cpp  RosbagUtils.cpp  TimeStampHandler.cpp
